--- a/flutter_application_1/pubspec.yaml
+++ b/flutter_application_1/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   firebase_core: ^3.5.0
   firebase_auth: ^5.3.0
   cloud_firestore: ^5.4.2
+  google_nav_bar: ^5.0.6
 
 dev_dependencies:
   flutter_test:
