--- a/flutter_application_1/pubspec.yaml
+++ b/flutter_application_1/pubspec.yaml
@@ -31,6 +31,8 @@ dependencies:
   flutter:
     sdk: flutter
   font_awesome_flutter: ^10.2.0
+  table_calendar: ^3.1.2
+  fl_chart: ^0.69.0 
     
 
 
