--- a/flutter_application_1/android/app/build.gradle
+++ b/flutter_application_1/android/app/build.gradle
@@ -20,11 +20,11 @@ android {
     }
 
     defaultConfig {
-        applicationId = "com.example.flutter_app"
-        minSdk = 23  // Keep this updated
-        targetSdk = flutter.targetSdkVersion
-        versionCode = flutter.versionCode
-        versionName = flutter.versionName
+       applicationId = "com.example.flutter_"
+       minSdk = 23
+       targetSdk = flutter.targetSdkVersion
+       versionCode = flutter.versionCode
+       versionName = flutter.versionName
     }
 
     buildTypes {
