--- a/flutter_application_1/pubspec.yaml
+++ b/flutter_application_1/pubspec.yaml
@@ -85,10 +85,16 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
+  fonts:
+    - family: AntonSC
+      fonts:
+        - asset: fonts/AntonSC-Regular.ttf
+    - family: NanumGothicCoding
+      fonts:
+        - asset: fonts/NanumGothicCoding-Regular.ttf
+    - family: Abel
+      fonts:
+        - asset: fonts/Abel-Regular.ttf
   #       - asset: fonts/Schyler-Italic.ttf
   #         style: italic
   #   - family: Trajan Pro
