--- a/flutter_application_1/pubspec.yaml
+++ b/flutter_application_1/pubspec.yaml
@@ -42,7 +42,8 @@ dependencies:
   path_provider: ^2.0.1
   firebase_storage: ^12.3.1
   barcode_widget: ^2.0.2
-  printing: ^5.11.0
+  pdf: ^3.6.0
+  
     
 
 
